clean-up and re-organization of static files. Create a common Modal component that I can reuse

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 WebTools/Properties/PublishProfiles/Localhost.pubxml
 WebTools/Properties/PublishProfiles/Localhost.pubxml.user
 bin/
+build/
 WebTools/bin/
 WebTools/dist/trek.js
 WebTools/dist/trek.js.LICENSE.txt
