allow weapons to be specified for custom spaceframes; general tweaks to css rules, some with broad-reaching implications

--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.220101",
+  "version": "1.220103",
   "name": "startrek",
-  "author": "Christoffer Lundberg",
+  "author": "Christoffer Lundberg, BC Holmes",
   "license": "ISC",
   "main": "src/app.tsx",
   "private": true,
