update styles so that modal selection dialogs take up less screen real estate on phones

--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,7 +1,13 @@
 {
-  "version": "1.220103",
+  "version": "1.220110",
   "name": "startrek",
-  "author": "Christoffer Lundberg, BC Holmes",
+  "author": "Christoffer Lundberg",
+  "contributors": [
+    {
+      "name": "BC Holmes",
+      "url": "https://blog.bcholmes.org"
+    }
+  ],
   "license": "ISC",
   "main": "src/app.tsx",
   "private": true,
