--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.220115",
+  "version": "1.220116",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
@@ -14,6 +14,7 @@
   "dependencies": {
     "es6-promise": "^3.2.1",
     "pdf-lib": "1.16.0",
+    "@pdf-lib/fontkit": "1.1.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "4.0.3",
