--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -13,12 +13,14 @@
   "private": true,
   "dependencies": {
     "es6-promise": "^3.2.1",
+    "bootstrap": "^4.6.1",
     "pdf-lib": "1.17.1",
     "@pdf-lib/fontkit": "1.1.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "4.0.3",
-    "systemjs": "^0.19.27"
+    "systemjs": "^0.19.27",
+    "url-parse": "1.5.10"
   },
   "devDependencies": {
     "@types/react": "16.14.14",
