--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -15,7 +15,7 @@
     "es6-promise": "^3.2.1",
     "base64url": "3.0.1",
     "bootstrap": "^4.6.1",
-    "rfc7541-huffman": "1.0.0",
+    "pako": "2.0.4",
     "pdf-lib": "1.17.1",
     "@pdf-lib/fontkit": "1.1.1",
     "react": "^16.14.0",
