--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -20,7 +20,9 @@
     "@pdf-lib/fontkit": "1.1.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-redux": "7.2.8",
     "react-scripts": "4.0.3",
+    "@reduxjs/toolkit": "1.8.1",
     "systemjs": "^0.19.27",
     "url-parse": "1.5.10"
   },
