add more starship outlines; - adjustments to the star generator; - pull some functionality out into separate files to avoid really gnarly long files

--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -15,6 +15,7 @@
     "es6-promise": "^3.2.1",
     "base64url": "3.0.1",
     "bootstrap": "^4.6.1",
+    "bootstrap-icons": "1.8.3",
     "pako": "2.0.4",
     "pdf-lib": "1.17.1",
     "@pdf-lib/fontkit": "1.1.1",
