--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -16,6 +16,7 @@
     "base64url": "3.0.1",
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "1.8.3",
+    "copy-to-clipboard": "3.3.1",
     "pako": "2.0.4",
     "pdf-lib": "1.17.1",
     "@pdf-lib/fontkit": "1.1.1",
