--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.220703",
+  "version": "1.220726",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
@@ -12,35 +12,35 @@
   "main": "src/app.tsx",
   "private": true,
   "dependencies": {
-    "es6-promise": "^3.2.1",
+    "@pdf-lib/fontkit": "1.1.1",
+    "@reduxjs/toolkit": "1.8.1",
     "base64url": "3.0.1",
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "1.8.3",
     "copy-to-clipboard": "3.3.1",
+    "es6-promise": "^3.2.1",
     "pako": "2.0.4",
     "pdf-lib": "1.17.1",
-    "@pdf-lib/fontkit": "1.1.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "7.2.8",
     "react-scripts": "4.0.3",
-    "@reduxjs/toolkit": "1.8.1",
     "systemjs": "^0.19.27",
     "url-parse": "1.5.10"
   },
   "devDependencies": {
     "@types/react": "16.14.14",
     "@types/react-dom": "16.9.14",
-    "systemjs-builder": "^0.15.18",
-    "ts-loader": "5.3.3",
-    "typescript": "4.5.4",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.9",
     "postcss-cli": "^9.0.1",
     "purgecss": "^4.0.2",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "systemjs-builder": "^0.15.18",
+    "ts-loader": "5.3.3",
+    "typescript": "4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
