--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -14,24 +14,25 @@
   "dependencies": {
     "@pdf-lib/fontkit": "1.1.1",
     "@reduxjs/toolkit": "1.8.1",
-    "base64url": "3.0.1",
-    "bootstrap": "^4.6.1",
-    "bootstrap-icons": "1.8.3",
+    "bootstrap": "^4.6.2",
+    "bootstrap-icons": "1.10.2",
+    "buffer": "6.0.3",
     "copy-to-clipboard": "3.3.1",
     "es6-promise": "^3.2.1",
+    "js-base64": "3.7.2",
     "pako": "2.0.4",
     "pdf-lib": "1.17.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "7.2.8",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "systemjs": "^0.19.27",
     "url-parse": "1.5.10"
   },
   "devDependencies": {
-    "@types/react": "16.14.14",
-    "@types/react-dom": "16.9.14",
-    "node-sass": "^6.0.1",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
+    "node-sass": "^8.0.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.9",
