--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -28,9 +28,12 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^12.1.1",
     "react-redux": "7.2.8",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "systemjs": "^0.19.27",
-    "url-parse": "1.5.10"
+    "url-parse": "1.5.10",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.2",
