--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.230107",
+  "version": "1.230108",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
@@ -33,7 +33,8 @@
     "react-scripts": "5.0.1",
     "systemjs": "^0.19.27",
     "url-parse": "1.5.10",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/react": "17.0.2",
