--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -51,12 +51,12 @@
   "devDependencies": {
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
-    "node-sass": "^8.0.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.9",
     "postcss-cli": "^9.0.1",
     "purgecss": "^4.0.2",
+    "sass": "^1.57.1",
     "serve": "^11.3.2",
     "systemjs-builder": "^0.15.18",
     "ts-loader": "5.3.3",
