--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.230318",
+  "version": "1.230319",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
@@ -33,6 +33,7 @@
     "es6-promise": "^3.2.1",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "2.2.0",
     "js-base64": "3.7.2",
     "pako": "2.0.4",
     "pdf-lib": "1.17.1",
