--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -33,7 +33,7 @@
     "es6-promise": "^3.2.1",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-http-backend": "2.2.0",
+    "i18next-resources-to-backend": "^1.1.3",
     "js-base64": "3.7.2",
     "pako": "2.0.4",
     "pdf-lib": "1.17.1",
