--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.230326",
+  "version": "1.230328",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
@@ -39,6 +39,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-resources-to-backend": "^1.1.3",
     "js-base64": "3.7.2",
+    "loader-utils": "^2.0.4",
     "pako": "2.0.4",
     "pdf-lib": "1.17.1",
     "react": "^17.0.2",
