--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.230806",
+  "version": "1.230812",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
@@ -22,6 +22,10 @@
     {
       "name": "Daniel Jödemann",
       "url": "http://www.daniel-joedemann.de/"
+    },
+    {
+      "name": "Michael Prangenberg",
+      "url": "https://github.com/mprangenberg"
     },
     {
       "name": "Keith Curtis",
