--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -54,6 +54,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^12.1.1",
+    "react-markdown": "^8.0.7",
     "react-redux": "7.2.8",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
