--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -51,8 +51,8 @@
     "loader-utils": "^2.0.4",
     "pako": "2.0.4",
     "pdf-lib": "1.17.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
     "react-markdown": "^8.0.7",
     "react-redux": "7.2.8",
@@ -60,13 +60,14 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "systemjs": "^0.19.27",
+    "tinycolor2": "^1.6.0",
     "url-parse": "1.5.10",
     "uuid": "9.0.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.2",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.9",
