--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -44,6 +44,7 @@
     "canvg": "4.0.1",
     "copy-to-clipboard": "3.3.1",
     "es6-promise": "^3.2.1",
+    "history": "5.3.0",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-resources-to-backend": "^1.1.3",
@@ -53,6 +54,7 @@
     "pdf-lib": "1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "2.4.1",
     "react-i18next": "^12.1.1",
     "react-markdown": "^8.0.7",
     "react-redux": "7.2.8",
