Per #183, fix a bug that was introduced at the last minute in the character reducer; fiddle with the image size for the banner image that gets shown when the URL is shared on social media; clean up and new version.

--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.231224",
+  "version": "1.231224a",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
