general clean up and fixes; more work on incorporating the tables from the Gamemaster's book.

--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.231224a",
+  "version": "1.231227",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
