Revert "switch over to Cantoo's version of pdf-lib"
This reverts commit 7079918d1cb7475a13d69171f88864fc25d47c2d.

--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -36,7 +36,6 @@
   "main": "src/app.tsx",
   "private": true,
   "dependencies": {
-    "@cantoo/pdf-lib": "1.20.0",
     "@pdf-lib/fontkit": "1.1.1",
     "@reduxjs/toolkit": "1.8.1",
     "bootstrap": "^4.6.2",
@@ -52,6 +51,7 @@
     "js-base64": "3.7.2",
     "loader-utils": "^2.0.4",
     "pako": "2.0.4",
+    "pdf-lib": "1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "2.4.1",
