--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.240120",
+  "version": "1.240120a",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
