minor wording change; update news and version number

--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.240120a",
+  "version": "1.240121",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
