--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -34,6 +34,9 @@
   ],
   "license": "ISC",
   "main": "src/app.tsx",
+  "directories": {
+    "test": "tests"
+  },
   "private": true,
   "dependencies": {
     "@pdf-lib/fontkit": "1.1.1",
@@ -69,8 +72,10 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
+    "jest": "^29.0.0",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
@@ -79,13 +84,14 @@
     "sass": "^1.57.1",
     "serve": "^14.2.0",
     "systemjs-builder": "^0.15.18",
+    "ts-jest": "^29.1.2",
     "ts-loader": "5.3.3",
     "typescript": "4.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
