--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -58,6 +58,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "2.10.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "2.4.1",
     "react-i18next": "^12.1.1",
     "react-markdown": "^8.0.7",
