--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.240216",
+  "version": "1.240216a",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
