clean-ups, new release, lower decks uniform updates, more translation

--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.240216a",
+  "version": "1.240218",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
