--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -39,6 +39,7 @@
   },
   "private": true,
   "dependencies": {
+    "@cantoo/pdf-lib": "1.21.0",
     "@pdf-lib/fontkit": "1.1.1",
     "@reduxjs/toolkit": "1.8.1",
     "bootstrap": "^5.3.2",
@@ -54,7 +55,6 @@
     "js-base64": "3.7.2",
     "loader-utils": "^2.0.4",
     "pako": "2.0.4",
-    "pdf-lib": "1.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "2.10.0",
     "react-dom": "^18.2.0",
