--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -46,6 +46,7 @@
     "bootstrap-icons": "1.11.3",
     "buffer": "6.0.3",
     "canvg": "4.0.1",
+    "color": "4.2.3",
     "copy-to-clipboard": "3.3.1",
     "es6-promise": "^3.2.1",
     "history": "5.3.0",
@@ -76,6 +77,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
+    "@types/color": "3.0.6",
     "jest": "^29.0.0",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
