--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.240309",
+  "version": "1.240316",
   "name": "startrek",
   "author": "Christoffer Lundberg",
   "contributors": [
@@ -77,7 +77,8 @@
     "@types/jest": "^29.5.12",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
-    "@types/color": "3.0.6",
+    "@types/color": "3.0.6"
+    ,
     "jest": "^29.0.0",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
