--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -62,11 +62,12 @@
     "react-helmet": "^6.1.0",
     "react-hot-toast": "2.4.1",
     "react-i18next": "^12.1.1",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "^9.0.1",
     "react-redux": "7.2.8",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "rehype-external-links": "3.0.0",
     "systemjs": "^0.19.27",
     "tinycolor2": "^1.6.0",
     "url-parse": "1.5.10",
